Minimum Viable Site: Add photo & CV, update about blurb, hide blog link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
 title: Hello, I'm Jessica
-<!-- image: /assets/images/placeholder-18.jpg -->
+image: /assets/images/Jessica_Armstrong.png
 ---
-<p>I can help you be more effective by upskilling your team and uncovering hidden blockers, so that you can deliver the right thing faster.</p>
+<p>I help tech execs deliver the right things faster, by upskilling teams and uncovering hidden blockers.</p>
